# Mel-stippek.hu

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  start.bat  start.sh
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  session.rs  subscription.rs  tip.rs  user.rs
backend/src/routes/: admin.rs  ai.rs  auth.rs  discord.rs  mod.rs  payments.rs  tips.rs  track.rs
backend/src/services/: discord.rs  discord_bot.rs  email.rs  mod.rs  mongo.rs  odds.rs  simplepay.rs  stripe.rs  telegram.rs  whop.rs
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/elfelejtett-jelszo/: page.tsx
frontend/app/jelszo-visszaallitas/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profil/: page.tsx
frontend/app/register/: page.tsx
frontend/app/testpayment/: page.tsx
frontend/app/tippek/: page.tsx
frontend/components/: ask-ai.tsx  auth-shell.tsx  checkout-modal.tsx  discord-link.tsx  footer.tsx  google-button.tsx  navbar.tsx  pricing.tsx  proof-card.tsx  sound-fx.tsx  telegram-login.tsx  visit-tracker.tsx
frontend/components/ui/: animated-bg.tsx  background-paper-shaders.tsx  border-beam.tsx  custom-cursor.tsx  floating-dots-bg.tsx  glow-card.tsx  magnetic.tsx  (+2 more)
frontend/lib/: api.ts  sounds.ts  store.ts  utils.ts
(+2 files in other folders)
