[package]
name = "melostippek-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
mongodb = "2"

# Auth
bcrypt = "0.15"

# HTTP client (Stripe, Google, odds API proxy)
reqwest = { version = "0.12", features = ["json"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Config & env
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streams
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
